--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -105,7 +105,7 @@ h2:after {
     margin-top: 30px;
 }
 
-/*.contact h2 { color: #fafafa; }*/
+.contact h2 { color: #fafafa; }
 
 /* ----- PARAGRAPHS ----- */
 
@@ -352,7 +352,7 @@ header {
 }
 
 .ch-info .ch-info-front {
-    box-shadow: inset 0 0 0 16px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 0 12px rgba(85, 85, 85, 0.4);
 }
 
 .ch-info .ch-info-back {
@@ -363,18 +363,22 @@ header {
 
 .ch-img-1 {
     background-image: url(img/front-end.png);
+    background-repeat: no-repeat;
 }
 
 .ch-img-2 {
     background-image: url(img/back-end.png);
+    background-repeat: no-repeat;
 }
 
 .ch-img-3 {
     background-image: url(img/database.png);
+    background-repeat: no-repeat;
 }
 
 .ch-img-4 {
     background-image: url(img/tdd.png);
+    background-repeat: no-repeat;
 }
 
 .ch-info h3 {
@@ -413,15 +417,13 @@ header {
 /* LET'S CHAT */
 /*------------------------------*/
 
-/*
 .contact {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6)), url(img/bg-img-12.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/bg-img-12.jpg);
     background-size: cover;
     background-position: center;
-    height: 80vh;  100% of the viewport 
+    height: 50vh; 
     background-attachment: fixed;
 }
-*/
 
 
 
