--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -130,7 +130,7 @@ h2:after {
 /*------------------------------*/
 
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(img/bg-img-10.jpeg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/bg-img-10-min.jpeg);
     background-size: cover;
     background-position: center;
     height: 100vh; /* 100% of the viewport */
