--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,5 +1,4 @@
 /* Big tablet to 1200px (widths smaller than the 1140px row */
-/*
 @media only screen and (max-width: 1200px) {
     .main-img-text-box {
         width: 100%;
@@ -8,30 +7,25 @@
     
     .row { padding: 0 2%; }
 }
-*/
 
 /* Small table to big tablet: from 768px to 1023px */
-/*
 @media only screen and (max-width: 1023px) {
     body { font-size: 18px; }
     section { padding: 60px 0;}
     
 }
-*/
 
 
 
 /* Small phones to small tablets: from 481px to 767px */
-/*
 @media only screen and (max-width: 767px) {
-   
+   .main-nav { display: none; }
     
 }
-*/
 
 
 /*small phones: from 0 to 480px*/
-/*
+
 @media only screen and (max-width: 280px) {
     
-}*/
+}
