--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -200,6 +200,19 @@ header {
     border-bottom: 2px solid #f1c40f;
 }
 
+/* Mobile nav */
+.mobile-nav-icon {
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.mobile-nav-icon i {
+    font-size: 200%;
+    color: #fff;
+}
+
 /* Sticky nav */
 
 .sticky {
