change the highlighted text from telescopic and change some wording on about-me

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -241,15 +241,31 @@ header {
 /* ABOUT ME */
 /*------------------------------*/
 
-.section-about-me { background-color: #f5f5f5; }
+.section-about-me { 
+/*    background-color: #f5f5f5;*/
+    height: 90vh;
+}
+
+.about-me-wrapper {
+    line-height: 140%;
+    font-family: 'Lato', 'Arial', sans-serif;
+    font-weight: 300;
+    font-size: 28px;
+}
 
 /*------------------------------*/
 /* WORKS */
 /*------------------------------*/
 
+.section-works {
+    background-color: #f7f5f5;
+    height: 80vh;
+}
+
 .works-showcase {
     list-style: none;
     width: 100%;
+    margin-top: 20px;
 }
 
 .works-showcase li {    
@@ -314,7 +330,8 @@ header {
 /*------------------------------*/
 
 .section-skills {
-    background-color: #f5f5f5;
+/*    background-color: #f5f5f5;*/
+    height: 80vh;
 }
 
 .ch-grid {
@@ -448,7 +465,7 @@ header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/bg-img-12.jpg);
     background-size: cover;
     background-position: center;
-    height: 50vh; 
+    height: 80vh; 
     background-attachment: fixed;
 }
 
