--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -243,7 +243,7 @@ header {
 
 .section-about-me { 
 /*    background-color: #f5f5f5;*/
-    height: 90vh;
+    height: 100vh;
 }
 
 .about-me-wrapper {
@@ -251,6 +251,12 @@ header {
     font-family: 'Lato', 'Arial', sans-serif;
     font-weight: 300;
     font-size: 28px;
+}
+
+.about-me-wrapper a:link,
+.about-me-wrapper a:visited {
+    color: #41CCA5;
+    text-decoration: none;
 }
 
 /*------------------------------*/
