change hover background color to underline to make it look more clickable

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -98,7 +98,7 @@ h3 {
 h2:after {
     display: block;
     height: 2px;
-    background-color: #e67e22;
+    background-color: #f1c40f;
     content: " ";
     width: 100px;
     margin: 0 auto;
@@ -257,6 +257,13 @@ header {
 .about-me-wrapper a:visited {
     color: #41CCA5;
     text-decoration: none;
+}
+
+.about-me-wrapper a:hover,
+.about-me-wrapper a:active {
+  -webkit-transition: border-bottom 0.2s;
+  transition: border-bottom 0.2s;
+  border-bottom: 2px solid #f1c40f;
 }
 
 /*------------------------------*/
