--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -453,7 +453,9 @@ header {
     color: #fff;
     padding: 10px 5px;
     margin: 0 30px;
-    font-size: 15px;
+    font-size: 16px;
+    line-height: 22px;
+    letter-spacing: 1px;
     border-top: 1px solid rgba(255,255,255,0.5);
 }
 
